--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
+        "preferred-install": "dist",
         "sort-packages": true
     },
     "autoload": {
