Added comment why wikipedia/composer-merge-plugin is needed.

--- a/composer.json
+++ b/composer.json
@@ -78,6 +78,7 @@
         "patchLevel": {
             "drupal/core": "-p2"
         },
+        "_comment1": "Without the wikimedia/composer-merge-plugin drupal/core patches does not get applied from contrib modules automatically. See: https://github.com/cweagans/composer-patches/issues/219",
         "merge-plugin": {
             "include": [
                 "web/modules/contrib/*/composer.json",
