--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,28 @@
                     "cweagans/composer-patches": "1.6.*"
                 }
             }
+        },
+        "swagger_ui": {
+            "type": "package",
+            "package": {
+                "name": "mxr576/swagger-ui",
+                "description": "Swagger UI composer package does not contains some required information to be installed by composer/installer.",
+                "version": "3.17.3",
+                "type": "drupal-library",
+                "extra": {
+                    "installer-name": "swagger_ui"
+                },
+                "dist": {
+                    "url": "https://github.com/swagger-api/swagger-ui/archive/v3.17.3.zip",
+                    "type": "zip"
+                },
+                "require": {
+                    "composer/installers": "~1.0"
+                },
+                "replace": {
+                    "swagger-api/swagger-ui": "3.17.*"
+                }
+            }
         }
     },
     "require": {
@@ -46,6 +68,8 @@
         "drupal/swagger_ui_formatter": "^2.0",
         "drush/drush": "^9.0.0",
         "mxr576/composer-patches": "^1.0",
+        "mxr576/swagger-ui": "^3.17",
+        "swagger-api/swagger-ui": "^3.17",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
