--- a/composer.json
+++ b/composer.json
@@ -72,8 +72,7 @@
         "drupal/swagger_ui_formatter": "^2.0",
         "drush/drush": "^9.0.0",
         "mxr576/composer-patches": "^1.0",
-        "mxr576/swagger-ui": "^3.17",
-        "swagger-api/swagger-ui": "^3.17",
+        "oomphinc/composer-installers-extender": "^1.1",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
