--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,11 @@
             "_comment1": "We have to install it from here until the recent changes introduced in the workflow does not get released in a new alpha version.",
             "url": "https://github.com/mxr576/apigee-devportal-drupal"
         },
+        "forked-composer-merge-plugin": {
+            "type": "vcs",
+            "_comment1": "We have to install it from here until this PR is open: https://github.com/wikimedia/composer-merge-plugin/pull/169. Applying this fix as a patch is not an option.",
+            "url": "https://github.com/mxr576/composer-merge-plugin"
+        },
         "fixed-composer-patches": {
             "type": "package",
             "package": {
@@ -55,7 +60,7 @@
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
-        "wikimedia/composer-merge-plugin": "^1.4"
+        "wikimedia/composer-merge-plugin": "dev-capture-input-options"
     },
     "require-dev": {
         "webflo/drupal-core-require-dev": "~8.5.5"
