Updated drupal/apigee_edge module to alpha6 and apigee/apigee-client-php to alpha3.

--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,6 @@
             "type": "composer",
             "url": "https://asset-packagist.org"
         },
-        "forked-apigee_edge": {
-            "type": "vcs",
-            "_comment1": "We have to install it from here until the recent changes introduced in the workflow does not get released in a new alpha version.",
-            "url": "https://github.com/mxr576/apigee-devportal-drupal"
-        },
         "forked-composer-merge-plugin": {
             "type": "vcs",
             "_comment1": "We have to install it from here until this PR is open: https://github.com/wikimedia/composer-merge-plugin/pull/169. Applying this fix as a patch is not an option.",
@@ -50,7 +45,7 @@
         "composer/installers": "^1.5",
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
-        "drupal/apigee_edge": "dev-workflow",
+        "drupal/apigee_edge": "^1.0.0-alpha6",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5.5",
         "drupal/swagger_ui_formatter": "^2.0",
