New contrib: Config Installer.

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "cweagans/composer-patches": "1.x-dev",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/apigee_edge": "^1.0.0-alpha7",
+        "drupal/config_installer": "^1.8",
         "drupal/config_split": "^1.4",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.6",
