`php-http/client-common` downgraded to 1.7.0 until this [PR](https://github.com/apigee/apigee-client-php/pull/20) and the references issues haven't been resolved.

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/swagger_ui_formatter": "^2.0",
         "drush/drush": "^9.0.0",
         "oomphinc/composer-installers-extender": "^1.1",
+        "php-http/client-common": "1.7.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
