--- a/config/sync/config_split.config_split.keep.yml
+++ b/config/sync/config_split.config_split.keep.yml
@@ -4,7 +4,7 @@ status: true
 dependencies: {  }
 id: keep
 label: keep
-description: "Environment specific configurations (config objects) that should not be synced but must not be deleted from the current environment when a full config import happens. Ex.: Contact/Webform forms, Keys, Simplenews newsletters, etc.\r\n\r\nThis split should be always active, if you need to disable it add this to the settings.php: $config['config_split.config_split.status']['status'] = FALSE;\r\n"
+description: "Environment specific configurations (config objects) that should not be synced but must not be deleted from the current environment when a full config import happens. Ex.: Contact/Webform forms, Keys, Simplenews newsletters, etc.\r\n\r\nThis split should be always active, if you need to disable it add this to the settings.php: $config['config_split.config_split.keep']['status'] = FALSE;\r\n"
 folder: ../config/keep
 module:
   apigee_edge_debug: 0
